[package]
name = "turbo-ncu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
node-semver = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
